--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,5 @@ pygments: true
 permalink: /:title
 google_analytics_id: UA-21369110-4
 exclude : ['sass']
+paginate: 3
+paginate_path: "blog/page:num"
