--- a/_config.yml
+++ b/_config.yml
@@ -3,3 +3,7 @@ pygments: true
 permalink: /blog/:title
 google_analytics_id: UA-21369110-4
 exclude : ['sass']
+markdown: rdiscount
+rdiscount:
+  extensions:
+    - autolink      # greedily urlify links
