--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-exclude : ['_sass']
+exclude : ['_less']
 google_analytics_id: UA-21369110-4
 name: Pierre Baron
 encoding : UTF-8
@@ -17,4 +17,3 @@ markdown: rdiscount
 paginate: 5
 paginate_path: /blog/page:num
 permalink: /blog/:title
-highlighter: rouge
