--- a/package.json
+++ b/package.json
@@ -1,17 +1,21 @@
 {
-  "name": "prbaron.github.com",
-  "main": "main.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "devDependencies": {
-    "grunt": "~0.4.5",
-    "grunt-contrib-concat": "~0.4.0",
-    "load-grunt-tasks": "~0.5.0",
-    "grunt-contrib-watch": "~0.6.1",
-    "grunt-shell": "~0.7.0",
-    "grunt-bower-task": "~0.3.4",
-    "grunt-contrib-compass": "~0.8.0",
-    "grunt-contrib-less": "^0.11.2"
-  }
+    "name"            : "prbaron.github.com",
+    "main"            : "app.js",
+    "scripts"         : {
+        "test" : "echo \"Error: no test specified\" && exit 1"
+    },
+    "devDependencies" : {
+        "bower"                 : "*",
+        "grunt"                 : "~0.4.5",
+        "grunt-cli"             : "*",
+        "grunt-bower-task"      : "~0.3.4",
+        "grunt-contrib-clean"   : "~0.5.0",
+        "grunt-contrib-concat"  : "~0.4.0",
+        "grunt-contrib-connect" : "~0.7.1",
+        "grunt-contrib-less"    : "^0.11.2",
+        "grunt-contrib-watch"   : "~0.6.1",
+        "grunt-shell"           : "~0.7.0",
+        "less"                  : "*",
+        "load-grunt-tasks"      : "~0.5.0"
+    }
 }
