--- a/_config.yml
+++ b/_config.yml
@@ -1,20 +1,21 @@
-exclude : ['_less']
 google_analytics_id: UA-21369110-4
 name: Pierre Baron
 encoding : UTF-8
+gems:
+- jekyll-compass
 navigation:
 - text: HOME
   url: /
-- text: PROJETS
-  url: /works/
-  layout: work
 - text: BLOG
   url: /blog/
   layout: post
 - text: CONTACT
   url: /contact/
-markdown: rdiscount
+collections :
+- works
 paginate: 5
 paginate_path: /blog/page:num
 permalink: /blog/:title
-highlighter: pygments
+sass:
+    sass_dir: _sass
+    style: :compressed
