--- a/_config.yml
+++ b/_config.yml
@@ -19,3 +19,4 @@ url: http://www.pierrebaron.fr
 sass:
     sass_dir: _sass
     style: :compressed
+exclude: ['node_modules', 'gulpfile.js', 'package.json']
